# oop_2023

./: README.md
lab1/: .gitignore  CMakeLists.txt  README.md  build.bash  fuzz.bash
lab1/lib/: matrix.cpp  matrix.h
lab1/src/: main.cpp
lab2/: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
lab2/dialog/: CMakeLists.txt  Dialog.h
lab2/dice/: CMakeLists.txt  Dice.cpp  Dice.h
lab2/group/: CMakeLists.txt  DiceGroup.cpp  DiceGroup.h
lab2/tests/: CMakeLists.txt  test.cpp
lab3/: .gitignore  CMakeLists.txt  CPU.mdj  Doxyfile
lab3/src/: instruction_set.h  main.cpp
lab3/src/CPU/CPU/: CMakeLists.txt  CPU.h
lab3/src/CPU/execution/: ALU.h  CMakeLists.txt  ControlUnit.cpp  ControlUnit.h  ExecUnit.cpp  ExecUnit.h  FPU.h
lab3/src/CPU/instructions/: BinaryInstruction.h  DataInitOperator.h  Instruction.h  JumpOperator.h  Operation.h  UnaryInstruction.h
lab3/src/CPU/memory/: CMakeLists.txt  DataMemory.h  Identifier.h  Operand.h  ProgIdentifier.h  ProgrammMemory.h  Register.h  RegisterBlock.h
lab3/src/CPU/tests/: CMakeLists.txt
lab3/src/IDE/: CMakeLists.txt
lab3/src/IDE/src/: Editor.cpp  Editor.h  Editor.qrc  Editor.rc  Editor.ui  app.cpp  config.h  notepad.cpp  notepad.h  notepad.ui
lab3/src/Vector/: CMakeLists.txt  Vector.h  VectorIterator.h
lab3/tests/vector/: CMakeLists.txt  test.cpp
lab3_2/: .gitignore  CMakeLists.txt  Doxyfile  Server.mdj
lab3_2/src/: main.cpp
lab3_2/src/Server/Defines/: Defines.hpp
lab3_2/src/Server/Link/: CMakeLists.txt  Link.hpp
lab3_2/src/Server/Message/: CMakeLists.txt  Message.cpp  Message.hpp
lab3_2/src/Server/Server/: CMakeLists.txt  Server.cpp  Server.hpp
lab3_2/src/Server/TransportTable/: CMakeLists.txt  TransportTable.cpp  TransportTable.hpp
lab3_2/src/TableView/: CMakeLists.txt
lab3_2/src/TableView/src/: Calculations.cpp  Calculations.hpp  Config.hpp  TableViewer.ui  app.cpp
lab3_2/src/TableView/src/CreateDialog/: CreateDialog.cpp  CreateDialog.h  CreateDialog.ui
lab3_2/src/TableView/src/TableViewer/: TableViewer.cpp  TableViewer.h  TableViewer.ui
lab3_2/tests/: CMakeLists.txt
lab3_2/tests/Server/Link/: link.cpp
lab3_2/tests/Server/Message/: message.cpp
lab3_2/tests/Server/Server/: server.cpp
lab3_2/tests/Server/TransportTable/: transport_table.cpp
